--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -25,6 +25,7 @@ $kotlin\
 $haskell\
 $python\
 $terraform\
+$custom\
 [](fg:teal bg:blue)\
 $docker_context\
 [](fg:blue bg:yellow)\
@@ -185,6 +186,16 @@ format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
 symbol = "󱁢"
 format = '[[ $symbol $version->$workspace ](fg:base bg:teal)]($style)'
 style = "bg:teal"
+disabled = true
+
+[custom.opentofu]
+command = "tofu --version | head -n1"  # Runs 'tofu --version' and shows only the first line
+when = '[[ -n $(find . -maxdepth 1 -name "*.tf*" 2>/dev/null) ]]'  # Detects .tf files
+format = "[$symbol ($output )]($style)"
+symbol = "🌱"
+style = "fg:base bg:teal"
+# detect_extensions = '["tf", "tfplan", "tfstate"]'
+# detect_folders = '[".terraform"]'
 
 [aws]
 format = '[[ $symbol( $profile )](fg:base bg:yellow)]($style)'
