tmux scrollback reduced
- nvim mason workaround for breaking changes in 2.0

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,7 +13,7 @@ setw -g pane-base-index 1
 set-option -g mouse on
 
 # history-limit
-set -g history-limit 1000000
+set -g history-limit 10000
 
 # clear history CTRL-X without prefix
 # bind-key -n C-x clear-history # Conflict with nano
@@ -169,7 +169,9 @@ unbind h
 bind s split-window -h -c "#{pane_current_path}"
 unbind v
 bind v split-window -v -c "#{pane_current_path}"
-
+# Close pane
+unbind x
+bind x kill-pane
 # maximize/restore pane
 bind-key z resize-pane -Z
 
