--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -47,6 +47,7 @@ bind r source-file ~/.tmux.conf
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'roosta/tmux-fuzzback'
 
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 ## manual tmux navigator
