line spacing, added marks plugin in nvim

--- a/k9s/.config/k9s/config.yaml
+++ b/k9s/.config/k9s/config.yaml
@@ -6,8 +6,8 @@ k9s:
   readOnly: false
   noExitOnCtrlC: false
   portForwardAddress: localhost
-  k9s.ui.skin: dracula
   ui:
+    skin: dracula
     enableMouse: false
     headless: false
     logoless: false
