--- a/k9s/.config/k9s/config.yaml
+++ b/k9s/.config/k9s/config.yaml
@@ -1,5 +1,5 @@
 k9s:
-  liveViewAutoRefresh: false
+  liveViewAutoRefresh: true
   screenDumpDir: /Users/sjc-lp03742/.config/k9s/screen-dumps
   refreshRate: 2
   maxConnRetry: 5
@@ -10,7 +10,7 @@ k9s:
     skin: dracula
     enableMouse: false
     headless: false
-    logoless: false
+    logoless: true
     crumbsless: false
     reactive: false
     noIcons: false
@@ -18,7 +18,7 @@ k9s:
   skipLatestRevCheck: false
   disablePodCounting: false
   shellPod:
-    image: busybox:1.35.0
+    image: tyagsha/toolbox:0.1.0
     namespace: default
     limits:
       cpu: 100m
