--- a/opencode/.config/opencode/opencode.jsonc
+++ b/opencode/.config/opencode/opencode.jsonc
@@ -1,6 +1,6 @@
 {
   "$schema": "https://opencode.ai/config.json",
-  "theme": "tokyonight",
+  "theme": "tokyonight-dark",
     "lsp": {
     "terraform": {
       "disabled": false,
