tmux: auto window naming

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,10 @@ setw -g pane-base-index 1
 # enable mouse
 set-option -g mouse on
 
+# Automatic window renaming
+set-window-option -g automatic-rename on
+set-window-option -g automatic-rename-format '#{pane_current_command}:#{b:pane_current_path}'
+
 # history-limit
 set -g history-limit 10000
 
