tmux updated to handle urls

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,6 +11,15 @@ setw -g pane-base-index 1
 
 # enable mouse
 set-option -g mouse on
+set -g set-clipboard on
+
+set -g default-terminal "${TERM}"
+# Hyperlinks
+set -as terminal-features ",*:hyperlinks"
+# Undercurl
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
 
 # Automatic window renaming
 set-window-option -g automatic-rename on
@@ -52,6 +61,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'roosta/tmux-fuzzback'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 
 # set -g @plugin 'christoomey/vim-tmux-navigator'
 ## manual tmux navigator - Re-enabled: tmux.nvim not working properly
@@ -98,18 +108,19 @@ set -g @plugin 'fabioluciano/tmux-tokyo-night'
 
 ## Tokyo Night Theme configuration
 set -g @theme_variation 'night'
-set -g @theme_left_separator ''
-set -g @theme_right_separator ''
-# set -g @theme_left_separator ''
-# set -g @theme_right_separator ''
+set -g @theme_left_separator ''
+set -g @theme_right_separator ''
 set -g @theme_enable_icons 1
 set -g @theme_disable_plugins 0
-#
-# Undercurl
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
+### Enable transparency
+set -g @theme_transparent_status_bar 'false'
+set -g @theme_plugin_weather_location 'Niagara Falls, Canada'
+
+# Show tmux mode in status bar
+set -g status-right "#{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}#{?pane_in_mode,#[reverse]<#{pane_mode}>#[noreverse] ,}#[fg=brightblue]%Y-%m-%d %H:%M "
+set -g status-right-length 50
+#
 ### Catppuccin theme
 # set -g @plugin 'catppuccin/tmux#latest'
 # set -g @plugin 'tmux-plugins/tpm'
