--- a/granted/.granted/config
+++ b/granted/.granted/config
@@ -1,9 +1,9 @@
 DefaultBrowser = "FIREFOX"
 CustomBrowserPath = "/Applications/Zen.app/Contents/MacOS/zen"
-
 CustomSSOBrowserPath = ""
 Ordering = ""
 ExportCredentialSuffix = ""
+CredentialProcessAutoLogin = true
 
 [AWSConsoleBrowserLaunchTemplate]
   Command = ""
