--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -15,7 +15,7 @@ background-opacity = .9
 background-blur-radius = 20
 
 # view
-macos-titlebar-style = hidden
+#macos-titlebar-style = hidden
 
 # keybinds
 keybind = super+i=inspector:toggle
